vlib/v/checker/tests/orm_multidim_array.vv
import db.sqlite

@[table: users]
struct User {
	id int @[pimary]
}

@[table: foos]
struct Foo {
	id    int      @[primary; sql: serial]
	users []User   @[fkey: id]
	bad   [][]User @[fkey: id]
}

fn main() {
	db := sqlite.connect(':memory:')!
	sql db {
		create table Foo
	}!
}
